# cuda-practice

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
basic/: hello_cuda.cu  sum_array.cu  test.cu
cmake/modules/: find_library_create_target.cmake  parse_make_options.cmake  resolve_dirs.cmake  set_ifndef.cmake
cpp/: CMakeLists.txt  cuda_common.cuh
cpp/average_pooling_1d/: CMakeLists.txt  baseline.cu  bindings.cpp
cpp/convolution_1d/: CMakeLists.txt  baseline.cu  bindings.cpp
cpp/hello_world/: CMakeLists.txt  bindings.cpp  hello_cuda.cu
cpp/l1_normalization/: CMakeLists.txt  baseline.cu  bindings.cpp  optimize.cu
cpp/l2_normalization/: CMakeLists.txt  baseline.cu  bindings.cpp
cpp/layer_normalization/: CMakeLists.txt  baseline.cu  bindings.cpp
cpp/matrix_multiplication/: CMakeLists.txt  bindings.cpp  cuda_core.cu  tensor_core.cu
cpp/matrix_multiplication/ampere/: CMakeLists.txt  bindings.cpp  cublas.cu  device_utils.cuh  host_utils.cuh  naive.cu  optimize_1.cu  optimize_2.cu  optimize_3.cu  optimize_4.cu  optimize_5.cu  optimize_6.cu  optimize_7.cu  optimize_8.cu
cpp/matrix_multiplication/hopper/: CMakeLists.txt  bindings.cpp  device_utils.cuh  host_utils.cuh  optimize_1.cu  optimize_2.cu  optimize_3.cu  params.cuh
cpp/matrix_multiplication/optimize/: device_utils.cuh  host_utils.cuh  optimize_1.cu  optimize_3.cu  optimize_4.cu  optimize_5.cu
cpp/matrix_transpose/: CMakeLists.txt  bindings.cpp  naive.cu  shared_memory.cu
cpp/multi_gpu/: wave_equation.cu
cpp/multiple_gpu/: CMakeLists.txt  bindings.cpp  wave_equation.cu
cpp/parallel_reduction/: CMakeLists.txt  bindings.cpp  complete_unrolling.cu  interleaved_pair.cu  loop_unrolling.cu  neighbored_pair.cu  neighbored_pair_less.cu  template_function.cu  template_function_shared_memory.cu  warp_shuffle_instruction.cu  warp_unrolling.cu
cpp/prefix_multiple/: CMakeLists.txt  baseline.cu  bindings.cpp
cpp/prefix_sum/: CMakeLists.txt  baseline.cu  bindings.cpp  optimize.cu
cpp/relu/: CMakeLists.txt  baseline.cu  bindings.cpp  optimize.cu
cpp/rms_normalization/: CMakeLists.txt  baseline.cu  bindings.cpp  warp_shuffle_instruction.cu
cpp/vector_addition/: CMakeLists.txt  baseline.cu  bindings.cpp  vectorized_memory_access.cu
docker/: Dockerfile
docker/common/: NVIDIA.nsight-vscode-edition-2024.1.34572442.vsix  install_cmake.sh  install_cutlass_dsl.sh  install_mpi4py.sh  install_polygraphy.sh  install_pytorch.sh  install_tensorrt.sh  install_triton.sh  install_triton_lang.sh  requirements.txt
parallel_reduction/: CMakeLists.txt  complete_unrolling.cu  interleaved_pair.cu  loop_unrolling.cu  neighbored_pair.cu  neighbored_pair_less.cu  synchronization.cu  template_function.cu  warp_unrolling.cu
python/average_pooling_1d/: main.py
python/convolution_1d/: main.py
python/hello_world/: main.py
python/l1_normalization/: main.py
python/l2_normalization/: main.py
python/layer_normalization/: main.py
python/matrix_multipication/: pytorch.py
python/matrix_multiplication/: main.py
python/matrix_multiplication/ampere/: main.py
python/matrix_multiplication/hopper/: main.py
python/matrix_transpose/: main.py
python/multiple_gpu/: main.py
python/parallel_reduction/: main.py
python/prefix_multiple/: main.py
python/prefix_sum/: main.py
python/relu/: main.py
python/rms_normalization/: main.py
python/vector_addition/: main.py
src/: CMakeLists.txt
src/basic/: CMakeLists.txt  sum_array.cu
src/parallel_reduction/: CMakeLists.txt  interleaved_pair.cu  template_function.cu  template_function_shared_memory.cu  warp_shuffle_instruction.cu
