add_executable(neighbored_pair neighbored_pair.cu)
add_executable(interleaved_pair interleaved_pair.cu)
add_executable(neighbored_pair_less neighbored_pair_less.cu)
add_executable(loop_unrolling loop_unrolling.cu)
add_executable(warp_unrolling warp_unrolling.cu)
add_executable(complete_unrolling complete_unrolling.cu)
add_executable(template_function template_function.cu)
