add_executable(matrix_multiplication_ampere_cublas cublas.cu)
target_link_libraries(matrix_multiplication_ampere_cublas gflags ${CUBLAS_LIB})

add_executable(matrix_multiplication_ampere_naive naive.cu)
target_link_libraries(matrix_multiplication_ampere_naive gflags)

add_executable(matrix_multiplication_ampere_optimize_1 optimize_1.cu)
target_link_libraries(matrix_multiplication_ampere_optimize_1 gflags)

add_executable(matrix_multiplication_ampere_optimize_2 optimize_2.cu)
target_link_libraries(matrix_multiplication_ampere_optimize_2 gflags)

add_executable(matrix_multiplication_ampere_optimize_3 optimize_3.cu)
target_link_libraries(matrix_multiplication_ampere_optimize_3 gflags)

add_executable(matrix_multiplication_ampere_optimize_4 optimize_4.cu)
target_link_libraries(matrix_multiplication_ampere_optimize_4 gflags)

add_executable(matrix_multiplication_ampere_optimize_5 optimize_5.cu)
target_link_libraries(matrix_multiplication_ampere_optimize_5 gflags)

add_executable(matrix_multiplication_ampere_optimize_6 optimize_6.cu)
target_link_libraries(matrix_multiplication_ampere_optimize_6 gflags)